--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,9 @@
 @use 'reset';
 @use 'body';
 
-$corCorpoWeb: #0228c0;
 $corHeader: #182C61;
 $corLink: #fff;
-$corBtn:#e41bc9;
+$corBtn:#44bd32;
 
 
 li {
